--- a/new.html
+++ b/new.html
@@ -48,12 +48,16 @@
         </li>
         <br>
         <hr>
-        <li>3. Forrest Gump
+        <li>3. Forrest Gump<br>
+            <a target="_blank" href="https://www.imdb.com/title/tt0109830/?ref_=nv_sr_1?ref_=nv_sr_1">
+            <img height="200" src="https://ih0.redbubble.net/image.716044460.7825/flat,550x550,075,f.u9.jpg">
+            </a>
             <p>
                     <iframe width="560" height="315"
                      src="https://www.youtube.com/embed/bLvqoHBptjg" 
                      frameborder="0" allow="accelerometer; autoplay; encrypted-media;
                       gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
             </p>
             <table border="5">
                 <tr>
